# pocketbase-sdk-rust

./: .gitignore  Cargo.toml
examples/: collections.rs  logs.rs  records.rs
src/: admin.rs  auth.rs  client.rs  collections.rs  httpc.rs  lib.rs  logs.rs  realtime.rs  records.rs
tests/: authenticate_admin.rs  authenticate_record.rs  collections.rs  items.json  realtime.rs  records.rs
