[package]
name        = "pocketbase-sdk"
version     = "0.1.1"
edition     = "2024"
authors     = ["Sreedev Kodichath <sreedev@icloud.com>", "CubeCoder <markus.hamacher16@gmail.com>"]
license     = "MIT"
description = "Pocketbase SDK"
readme      = "README.md"
homepage    = "https://github.com/sreedevk/pocketbase-sdk-rust"
categories  = ["development-tools"]
keywords    = [
  "pocketbase",
  "pocketbase-sdk",
  "rust-pocketbase",
  "pocketbase-rs"
]

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
url = "2.3.1"
reqwest = { version = "0.13.1", features = ["query", "json"] }
reqwest-eventsource = "0.6.0"

[dev-dependencies]
httpmock = "0.8.2"
